<resources>
    <string name="app_name">VoiceHealth Guide</string>
    <string name="welcome">WELCOME</string>
    <string name="email_id">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="sign_up_text">Don\'t have an account?</string>
    <string name="line">OR</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="register_text">Join us before?</string>
    <string name="sign_in">Sign In</string>
    <string name="name_required_error">Nama tidak boleh kosong.</string>
    <string name="invalid_email_error">Alamat email tidak valid.</string>
    <string name="invalid_password_error">Kata sandi harus memiliki minimal 8 karakter.</string>
    <string name="email_required">Email tidak boleh kosong</string>
    <string name="password_required">Password tidak boleh kosong</string>
    <string name="invalid_input_error">Input tidak valid</string>
    <string name="login_succes_dialog">Anda berhasil login. Sudah tidak sabar untuk belajar ya?</string>
    <string name="title">Dialog with hero icon</string>
    <string name="supporting_text">A dialog is a type of modal window that appears in front of app content to provide critical information, or ask for a decision.</string>
    <string name="cancel">Cancel</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="profile_image">profile image</string>
    <string name="good_morning">Good Morning</string>
    <string name="action_text">Ayo cari obatmu dengan suara!</string>
    <string name="news">News</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="title_card">Title</string>
    <string name="example_text">Etiam mollis metus non purus faucibus sollicitudin. Pellentesque sagittis mi. Integer.</string>
    <string name="logout">Logout</string>
    <string name="save_profile">Save Profile</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
</resources>